# medrec-sentinel

./: .gitignore  README.md  pyproject.toml  requirements-gpu.txt  requirements.txt  verify_startup.py
data/synth/: cases.jsonl
demo/: gradio_app.py
docs/: clinical_rubric.md  demo_script.md  kaggle_submission.md  kaggle_writeup.md  writeup_3pager.md
docs/plans/: 2026-01-24-kaggle-submission.md  2026-01-24-task1-code-quality.md
medrec_sentinel/: __init__.py  schemas.py
medrec_sentinel/eval/: metrics.py  run_eval.py
medrec_sentinel/extract/: __init__.py  baseline.py  meds.py
medrec_sentinel/llm/: __init__.py  medgemma.py
medrec_sentinel/pipeline/: __init__.py  run_case.py
medrec_sentinel/report/: note.py
medrec_sentinel/rules/: __init__.py  engine.py  knowledge_base.py
notebooks/: kaggle_submission.py
scripts/: __init__.py  download_model.py  generate_synth_cases.py
tests/: test_agent_trace_metadata.py  test_baseline_extractor.py  test_demo_builds.py  test_demo_trace_output.py  test_knowledge_base_rules.py  test_llm_wrapper_parsing.py  test_medgemma_known_allergies_precedence.py  test_medgemma_prompt_contract.py  test_metrics.py  test_note_contains_disclaimer.py  test_note_formatting.py  test_note_text_export.py  test_pipeline_smoke.py  test_risk_engine.py  test_run_eval_error_handling.py  test_schemas_roundtrip.py  test_smoke_import.py  test_synth_generator_seeded.py
